# SDL2_Installation

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindSDL2.cmake
